<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ResourceShare</string>
    
    <string name="bluetooth_on">Bluetooth is On</string>
    <string name="bluetooth_off">Bluetooth is Off</string>
    
    <string name="provide_resource">Provide Resource</string>
    <string name="seek_resource">Seek Resource</string>

    <string name="refresh">Refresh</string>
    
    <string name="ok">OK</string>
    
    <string name="next">Next</string>
    
    <string name="stop_sharing">Stop Sharing</string>
    
    <string name="flash">Flash</string>
    <string name="flash_on">Switch on flash</string>
    <string name="flash_off">Switch off flash</string>
    
    <string name="camera">Camera</string>
    <string name="take_picture">Take Picture</string>
    <string name="display_clicked_image">Display Image</string>
    
    <string name="wifi">Wifi</string>
    <string name="wifi_on">Switch on Wifi</string>
    <string name="wifi_off">Switch off Wifi</string>
    
    <string name="accelerometer">Accelerometer</string>
    <string name="get_xyz">Get Accelerometer values</string>
    
    <string name="gps">GPS</string>
    <string name="request_resource">Request</string>
    <string name="resource_list_access_resource">Access Resource</string>
    
</resources>
