<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <RadioGroup
            android:id="@+id/resource_list_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#838181" >

            <RadioButton
                android:id="@+id/resource_list_flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/flash" />

            <RadioButton
                android:id="@+id/resource_list_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />
<!-- 
            <RadioButton
                android:id="@+id/resource_list_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps" />
 -->
            <RadioButton
                android:id="@+id/resource_list_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />
            
            <RadioButton
                android:id="@+id/resource_list_accelerometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accelerometer" />
            
        </RadioGroup>

        <Button
            android:id="@+id/resource_list_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/request_resource" 
            
            android:background="@drawable/button"
       		android:paddingLeft="25dp"
        	android:paddingRight="25dp"
        	android:paddingBottom="25dp"
        	android:paddingTop="25dp"/>

        <TextView
            android:id="@+id/resource_list_requested_resource_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#838181" />
        
        <Button
            android:id="@+id/resource_list_access_resource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/resource_list_access_resource"
            android:visibility="gone"
            android:background="@drawable/button"
       		android:paddingLeft="25dp"
        	android:paddingRight="25dp"
        	android:paddingBottom="25dp"
        	android:paddingTop="25dp" />
        
    </LinearLayout>

</ScrollView>