<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
    <ToggleButton 
        android:id="@+id/wifi_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textOn="@string/wifi_off"
        android:textOff="@string/wifi_on"
        android:background="@drawable/button"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp"
        android:paddingTop="25dp" />
    
    <TextView
        android:id="@+id/sharing_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="#838181"
        android:visibility="gone" />
    
    <Button 
        android:id="@+id/stop_sharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_sharing"
        android:layout_marginTop="30dip"
        android:visibility="gone"
        android:background="@drawable/button"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="25dp"
        android:paddingTop="25dp" />

</LinearLayout>
